--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
         <h1>Hello, world</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta enim natus dolorem doloremque, veritatis, non ex similique accusantium, quae corporis ab cumque? Necessitatibus, a quasi non et explicabo porro vel.</p>
 </body>
 </html>
